Update Test civil 3.html

--- a/0_Pages/0_testvarios/Test/Test civil 3.html
+++ b/0_Pages/0_testvarios/Test/Test civil 3.html
@@ -1004,52 +1004,52 @@ var questions = [
   },
   {
     question: "¿Qué bienes se consideran gananciales por presunción?",
-    options: ["Los bienes adquiridos a título oneroso durante el matrimonio.", "Los bienes que se encuentren en posesión de uno de los cónyuges al inicio del matrimonio.", "Los bienes que se hereden por uno de los cónyuges durante el matrimonio.", "**Los bienes existentes en el matrimonio mientras no se pruebe que pertenecen privativamente a uno de los dos cónyuges.**"],
+    options: ["Los bienes adquiridos a título oneroso durante el matrimonio.", "Los bienes que se encuentren en posesión de uno de los cónyuges al inicio del matrimonio.", "Los bienes que se hereden por uno de los cónyuges durante el matrimonio.", "Los bienes existentes en el matrimonio mientras no se pruebe que pertenecen privativamente a uno de los dos cónyuges."],
     answer: 3,
   },
   {
     question: "¿Qué bienes se consideran privativos por definición?",
-    options: ["Los bienes adquiridos a título gratuito durante el matrimonio.", "**Los bienes que le pertenecieran a cada uno de los cónyuges al comenzar la sociedad de gananciales.**", "Los bienes adquiridos con dinero privativo durante el matrimonio.", "Los bienes que se obtengan por el trabajo o la industria de uno de los cónyuges."],
+    options: ["Los bienes adquiridos a título gratuito durante el matrimonio.", "Los bienes que le pertenecieran a cada uno de los cónyuges al comenzar la sociedad de gananciales.", "Los bienes adquiridos con dinero privativo durante el matrimonio.", "Los bienes que se obtengan por el trabajo o la industria de uno de los cónyuges."],
     answer: 1,
   },
   {
     question: "¿Qué sucede si un bien privativo se utiliza para adquirir otro bien durante el matrimonio?",
-    options: ["El nuevo bien se considera privativo.", "**El nuevo bien se considera ganancial.**", "El nuevo bien se considera proindiviso entre el cónyuge y la sociedad de gananciales en proporción al valor de la aportación privativa.", "Depende del régimen económico matrimonial que rija en el matrimonio."],
+    options: ["El nuevo bien se considera privativo.", "El nuevo bien se considera ganancial.", "El nuevo bien se considera proindiviso entre el cónyuge y la sociedad de gananciales en proporción al valor de la aportación privativa.", "Depende del régimen económico matrimonial que rija en el matrimonio."],
     answer: 1,
   },
   {
     question: "¿Qué es la subrogación real?",
-    options: ["Un mecanismo para convertir un bien privativo en ganancial.", "Un mecanismo para convertir un bien ganancial en privativo.", "**Un principio que establece que el bien adquirido con dinero o bienes gananciales tiene la misma naturaleza que éstos.**", "Un principio que establece que el bien adquirido con dinero o bienes privativos tiene la misma naturaleza que éstos."],
+    options: ["Un mecanismo para convertir un bien privativo en ganancial.", "Un mecanismo para convertir un bien ganancial en privativo.", "Un principio que establece que el bien adquirido con dinero o bienes gananciales tiene la misma naturaleza que éstos.", "Un principio que establece que el bien adquirido con dinero o bienes privativos tiene la misma naturaleza que éstos."],
     answer: 2,
   },
   {
     question: "¿Qué es la atribución de ganancialidad?",
-    options: ["Un acuerdo entre los cónyuges para convertir un bien privativo en ganancial.", "**Un acuerdo entre los cónyuges para convertir un bien ganancial en privativo.**", "Un mecanismo para convertir un bien proindiviso en ganancial.", "Un mecanismo para convertir un bien proindiviso en privativo."],
+    options: ["Un acuerdo entre los cónyuges para convertir un bien privativo en ganancial.", "Un acuerdo entre los cónyuges para convertir un bien ganancial en privativo.", "Un mecanismo para convertir un bien proindiviso en ganancial.", "Un mecanismo para convertir un bien proindiviso en privativo."],
     answer: 1,
   },
   {
     question: "¿Qué es la confesión de privatividad?",
-    options: ["Un mecanismo para convertir un bien ganancial en privativo.", "**Un mecanismo para convertir un bien privativo en ganancial.**", "Un acuerdo entre los cónyuges para convertir un bien ganancial en privativo.", "Un acuerdo entre los cónyuges para convertir un bien privativo en ganancial."],
+    options: ["Un mecanismo para convertir un bien ganancial en privativo.", "Un mecanismo para convertir un bien privativo en ganancial.", "Un acuerdo entre los cónyuges para convertir un bien ganancial en privativo.", "Un acuerdo entre los cónyuges para convertir un bien privativo en ganancial."],
     answer: 1,
   },
   {
     question: "¿Qué son los bienes proindiviso entre un cónyuge y la sociedad de gananciales?",
-    options: ["Los bienes que se heredan por uno de los cónyuges durante el matrimonio.", "Los bienes que se adquieren a título gratuito durante el matrimonio.", "**Los bienes que pertenecen en comunidad a uno de los cónyuges y a la sociedad de gananciales.**", "Los bienes que se obtienen por el trabajo o la industria de uno de los cónyuges."],
+    options: ["Los bienes que se heredan por uno de los cónyuges durante el matrimonio.", "Los bienes que se adquieren a título gratuito durante el matrimonio.", "Los bienes que pertenecen en comunidad a uno de los cónyuges y a la sociedad de gananciales.", "Los bienes que se obtienen por el trabajo o la industria de uno de los cónyuges."],
     answer: 2,
   },
   {
     question: "¿Qué sucede si se adquiere un bien a plazos durante el matrimonio, con dinero privativo y ganancial?",
-    options: ["El bien se considera privativo.", "El bien se considera ganancial.", "**El bien se considera proindiviso entre el cónyuge y la sociedad de gananciales en proporción al valor de las aportaciones respectivas.**", "Depende del régimen económico matrimonial que rija en el matrimonio."],
+    options: ["El bien se considera privativo.", "El bien se considera ganancial.", "El bien se considera proindiviso entre el cónyuge y la sociedad de gananciales en proporción al valor de las aportaciones respectivas.", "Depende del régimen económico matrimonial que rija en el matrimonio."],
     answer: 2,
   },
   {
     question: "¿Qué es la vivienda familiar?",
-    options: ["La vivienda que habita habitualmente la familia.", "La vivienda que es propiedad de uno de los cónyuges.", "**La vivienda que es propiedad de ambos cónyuges.**", "La vivienda que es propiedad de la sociedad de gananciales."],
+    options: ["La vivienda que habita habitualmente la familia.", "La vivienda que es propiedad de uno de los cónyuges.", "La vivienda que es propiedad de ambos cónyuges.", "La vivienda que es propiedad de la sociedad de gananciales."],
     answer: 0,
   },
   {
     question: "¿Qué es el ajuar familiar?",
-    options: ["Los muebles y enseres que se encuentran en la vivienda familiar.", "Los bienes que son propiedad de uno de los cónyuges.", "**Los bienes que son propiedad de ambos cónyuges.**", "Los bienes que son propiedad de la sociedad de gananciales."],
+    options: ["Los muebles y enseres que se encuentran en la vivienda familiar.", "Los bienes que son propiedad de uno de los cónyuges.", "Los bienes que son propiedad de ambos cónyuges.", "Los bienes que son propiedad de la sociedad de gananciales."],
      answer: 0,
   },
 
