--- a/0_Pages/0_testvarios/Test/Test eclesia.html
+++ b/0_Pages/0_testvarios/Test/Test eclesia.html
@@ -375,6 +375,53 @@ var questions = [
     ],
     answer: 3
   },
+  { question: "¿Qué busca el liberalismo?", options: ["Separar los poderes", "Unir los poderes", "Eliminar los poderes", "Ninguna de las anteriores"], answer: 0 },
+  { question: "¿Cómo cambió el liberalismo la percepción de la fe?", options: ["La fe se volvió más importante", "La fe se volvió menos importante", "La fe se mantuvo igual", "La fe se separó del poder político"], answer: 3 },
+  { question: "¿Qué organiza todo en el liberalismo?", options: ["La fe", "El poder político", "La razón", "Las emociones"], answer: 2 },
+  { question: "¿Qué busca el liberalismo con respecto a lo religioso?", options: ["Someter lo religioso a lo civil", "Someter lo civil a lo religioso", "Eliminar lo religioso", "Eliminar lo civil"], answer: 0 },
+  { question: "¿Qué es el totalitarismo?", options: ["Una rama del liberalismo", "Una rama del conservadurismo", "Una rama del socialismo", "Una rama del comunismo"], answer: 0 },
+  { question: "¿Cuál es una característica del totalitarismo?", options: ["Estado, suprema y total autoridad", "Voluntad e intereses individuales por encima del interés del Estado", "Promoción de libertades", "Aceptación de las creencias religiosas"], answer: 0 },
+  { question: "¿Cómo se ve la religión en el totalitarismo?", options: ["Se promueve la libertad religiosa", "Se rechazan las creencias religiosas", "Se promueven todas las religiones", "Se ignora la religión"], answer: 1 },
+  { question: "¿Qué sucede con la conciencia religiosa del individuo en el totalitarismo?", options: ["Se promueve", "Se ignora", "Se sustituye por la devoción y sumisión al Estado", "Se respeta"], answer: 2 },
+  { question: "¿Cómo se ve la libertad de establecimiento en el totalitarismo?", options: ["Se promueve", "No existe", "Se limita", "Se ignora"], answer: 1 },
+  { question: "¿Qué busca el totalitarismo con respecto al poder religioso?", options: ["Promoverlo", "Ignorarlo", "Coartarlo lo más posible", "Ninguna de las anteriores"], answer: 2 },
+  { question: "¿Qué sucede en España en el siglo XIX con respecto a la religión?", options: ["Se ignora la religión", "Se lucha entre los principios liberales y lo religioso", "Se promueve la religión", "Se elimina la religión"], answer: 1 },
+  { question: "¿Qué dice la Constitución de 1812 sobre la religión?", options: ["La religión es y será perpetuamente la católica, apostólica, romana, única y verdadera", "La religión no importa", "Todas las religiones son iguales", "No se menciona la religión"], answer: 0 },
+  { question: "¿Qué sucede en la Regencia de María Cristina (1833-1840)?", options: ["Se promueve la religión", "Se ignora la religión", "Se suprimen las órdenes religiosas", "Se promueven todas las religiones"], answer: 2 },
+  { question: "¿Qué dice la Constitución de 1837 (María Cristina) sobre la religión?", options: ["La nación se obliga a mantener el culto y los ministros de la religión católica que profesan los españoles", "La religión no importa", "Todas las religiones son iguales", "No se menciona la religión"], answer: 0 },
+  { question: "¿Qué sucede en el siglo XX (2ª República)?", options: ["El Estado español no tiene religión oficial", "El Estado español es católico", "El Estado español es ateo", "El Estado español es protestante"], answer: 0 },
+  { question: "¿Qué garantiza la Constitución de la 2ª República?", options: ["La libertad de conciencia y el derecho de profesar y practicar libremente cualquier religión", "La obligación de profesar la religión católica", "La prohibición de practicar cualquier religión", "La obligación de profesar la religión del Estado"], answer: 0 },
+  { question: "¿Qué sucede en el siglo XX (Franquista)?", options: ["Se promueve la libertad religiosa", "Se ignora la religión", "Se declara la confesionalidad católica", "Se promueven todas las religiones"], answer: 2 },
+  { question: "¿Qué dice la Constitución de 1876 sobre la religión?", options: ["La religión católica, apostólica, romana es la del Estado", "La religión no importa", "Todas las religiones son iguales", "No se menciona la religión"], answer: 0 },
+  { question: "¿Qué sucede a partir de 1967?", options: ["El Estado asumirá la protección de la libertad religiosa", "El Estado ignora la religión", "El Estado promueve la religión católica", "El Estado prohíbe todas las religiones"], answer: 0 },
+  { question: "¿Qué dice la ley de libertad religiosa de 1967?", options: ["El ejercicio del derecho de libertad religiosa, concebido según la doctrina católica, ha de ser compatible en todo caso con la confesionalidad del Estado español proclamada en sus Leyes Fundamentales", "La religión no importa", "Todas las religiones son iguales", "No se menciona la religión"], answer: 0 },
+  { question: "¿Qué busca el liberalismo con respecto a los poderes?", options: ["Unirlos", "Eliminarlos", "Separarlos", "Ninguna de las anteriores"], answer: 2 },
+  { question: "¿Qué sucede con la conciencia religiosa del individuo en el liberalismo?", options: ["Se promueve", "Se ignora", "Se sustituye por la devoción y sumisión al Estado", "Se respeta"], answer: 3 },
+  { question: "¿Cómo se ve la libertad de establecimiento en el liberalismo?", options: ["Se promueve", "No existe", "Se limita", "Se ignora"], answer: 0 },
+  { question: "¿Qué sucede en España en el siglo XIX con respecto a la religión?", options: ["Se ignora la religión", "Se lucha entre los principios liberales y lo religioso", "Se promueve la religión", "Se elimina la religión"], answer: 1 },
+  { question: "¿Qué sucede en el siglo XX (2ª República)?", options: ["El Estado español no tiene religión oficial", "El Estado español es católico", "El Estado español es ateo", "El Estado español es protestante"], answer: 0 },
+    { question: "¿Qué garantiza el Artículo 16?", options: ["Libertad ideológica, religiosa y de culto", "Separación Iglesia-Estado", "Estado apoya o adopta una religión", "Confusión de funciones"], answer: 0 },
+    { question: "¿Qué es un Estado Teocrático?", options: ["Estado que adopta el ateísmo", "Estado que ignora lo religioso", "Estado donde el derecho religioso entra en la normativa estatal", "Estado que permite la libertad religiosa"], answer: 2 },
+    { question: "¿Qué caracteriza a un Estado Confesional?", options: ["Adopta y ejerce una fe", "Neutralidad del Estado ante lo religioso", "Estado apoya o adopta una religión", "Radical separación del Estado respecto de lo religioso"], answer: 2 },
+    { question: "¿Qué es un Estado Separatista?", options: ["Estado que coopera con los grupos religiosos", "Estado que adopta el agnosticismo", "Estado con radical separación respecto de lo religioso", "Estado que no adopta ninguna religión"], answer: 2 },
+    { question: "¿Qué es un Estado Totalitario/Ateo?", options: ["Estado que coopera con los grupos religiosos", "Estado que adopta el ateísmo como fe del Estado", "Estado que permite la libertad religiosa", "Estado que adopta el agnosticismo"], answer: 1 },
+    { question: "¿Qué es un Estado Laicista?", options: ["Estado que adopta y ejerce una fe: el agnosticismo", "Estado que coopera con los grupos religiosos", "Estado que adopta el ateísmo como fe del Estado", "Estado que permite la libertad religiosa"], answer: 0 },
+    { question: "¿Qué es un Estado Aconfesional o Laico?", options: ["Estado que adopta el ateísmo como fe del Estado", "Estado que no adopta ninguna religión", "Estado que adopta y ejerce una fe: el agnosticismo", "Estado que coopera con los grupos religiosos"], answer: 1 },
+    { question: "¿Qué es un Estado Coordinacionista?", options: ["Estado que coopera con los grupos religiosos", "Estado que adopta el ateísmo como fe del Estado", "Estado que adopta y ejerce una fe: el agnosticismo", "Estado que no adopta ninguna religión"], answer: 0 },
+    { question: "¿Qué tipo de estado es España hoy?", options: ["Estado Totalitario/Ateo", "Estado Laicista", "Estado Aconfesional o Laico", "Estado Teocrático"], answer: 2 },
+    { question: "¿Qué tipo de estado permite muchas opciones y variantes de mayor confesionalismo o de menor confesionalismo?", options: ["Estado Teocrático", "Estado Confesional", "Estado Separatista", "Estado Aconfesional o Laico"], answer: 1 },
+    { question: "¿Qué tipo de estado tiene una radical separación del Estado respecto de lo religioso?", options: ["Estado Teocrático", "Estado Confesional", "Estado Separatista", "Estado Aconfesional o Laico"], answer: 2 },
+    { question: "¿Qué tipo de estado adopta el ateísmo como fe del Estado?", options: ["Estado Teocrático", "Estado Confesional", "Estado Separatista", "Estado Totalitario/Ateo"], answer: 3 },
+    { question: "¿Qué tipo de estado adopta y ejerce una fe: el agnosticismo?", options: ["Estado Teocrático", "Estado Confesional", "Estado Laicista", "Estado Aconfesional o Laico"], answer: 2 },
+    { question: "¿Qué tipo de estado no adopta ninguna religión?", options: ["Estado Teocrático", "Estado Confesional", "Estado Separatista", "Estado Aconfesional o Laico"], answer: 3 },
+    { question: "¿Qué tipo de estado coopera con los grupos religiosos?", options: ["Estado Teocrático", "Estado Confesional", "Estado Separatista", "Estado Coordinacionista"], answer: 3 },
+    { question: "¿Qué tipo de estado tiene una confusión entre los poderes religiosos y políticos y sus funciones?", options: ["Estado Teocrático", "Estado Confesional", "Estado Separatista", "Estado Aconfesional o Laico"], answer: 0 },
+    { question: "¿Qué tipo de estado tiene una confusión de funciones?", options: ["Estado Teocrático", "Estado Confesional", "Estado Separatista", "Estado Aconfesional o Laico"], answer: 1 },
+    { question: "¿Qué tipo de estado tiene una radical separación del Estado respecto de lo religioso?", options: ["Estado Teocrático", "Estado Confesional", "Estado Separatista", "Estado Aconfesional o Laico"], answer: 2 },
+    { question: "¿Qué tipo de estado adopta el ateísmo como fe del Estado?", options: ["Estado Teocrático", "Estado Confesional", "Estado Separatista", "Estado Totalitario/Ateo"], answer: 3 },
+    { question: "¿Qué tipo de estado adopta y ejerce una fe: el agnosticismo?", options: ["Estado Teocrático", "Estado Confesional", "Estado Laicista", "Estado Aconfesional o Laico"], answer: 2 },
+
+
 
 
 
