--- a/0_Pages/0_testvarios/Test/test civil.html
+++ b/0_Pages/0_testvarios/Test/test civil.html
@@ -957,6 +957,187 @@ var questions = [
     answer: 2
   },
 
+  { question: "¿Qué son las sucesiones especiales o excepcionales?", options: ["Son sucesiones que se dan en títulos nobiliarios", "Son sucesiones que se dan en explotaciones familiares agrarias", "Son sucesiones que se dan en inmuebles arrendados, rústicos o urbanos", "Todas las anteriores"], answer: 3 },
+  { question: "¿Qué caracteriza a las sucesiones especiales?", options: ["La peculiaridad del objeto transmitido", "Las reglas especiales por las que se rigen", "La relación sucesoria que se establece en éstas es independiente de la relación sucesoria típica", "Todas las anteriores"], answer: 3 },
+  { question: "¿Qué prevé el art. 62, f) CE?", options: ["La posibilidad de conceder honores y distinciones con arreglo a las leyes", "La posibilidad de conceder títulos nobiliarios", "La posibilidad de conceder honores y distinciones con arreglo a las leyes, incluyendo los títulos nobiliarios", "Ninguna de las anteriores"], answer: 2 },
+  { question: "¿Qué es la sucesión irregular en los títulos nobiliarios?", options: ["Es cuando el orden sucesorio aparece establecido en carta de concesión del título", "Es cuando el orden sucesorio es determinado por las disposiciones legales aplicables", "Es cuando el orden sucesorio es determinado por el testamento del poseedor del título", "Ninguna de las anteriores"], answer: 0 },
+  { question: "¿Qué establece el art. 5 del RD de 4 de mayo de 1948?", options: ["Establece la aplicación del orden de suceder por el que tradicionalmente se ha regido esta materia", "Establece la aplicación del orden de suceder por el que se rige la sucesión regular", "Establece la aplicación del orden de suceder por el que se rige la sucesión irregular", "Ninguna de las anteriores"], answer: 0 },
+  { question: "¿Qué establece la Ley 33/2006, de 30 de octubre?", options: ["Establece la igualdad del hombre y la mujer en el orden de sucesión de los títulos nobiliarios", "Establece la preferencia del hombre en el orden de sucesión de los títulos nobiliarios", "Establece la preferencia de la mujer en el orden de sucesión de los títulos nobiliarios", "Ninguna de las anteriores"], answer: 0 },
+  { question: "¿Qué establece el art. 16 de la Ley de Arrendamientos Urbanos de 1994?", options: ["Establece el régimen de sucesión mortis causa en el supuesto de fallecimiento del arrendatario", "Establece el régimen de sucesión mortis causa en el supuesto de fallecimiento del arrendador", "Establece el régimen de sucesión mortis causa en el supuesto de fallecimiento del propietario del inmueble", "Ninguna de las anteriores"], answer: 0 },
+  { question: "¿Quiénes pueden subrogarse en el contrato de arrendamiento en caso de muerte del arrendatario?", options: ["El cónyuge del arrendatario que al tiempo del fallecimiento conviviera con él", "La persona que hubiera venido conviviendo con el arrendatario de forma permanente en análoga relación de afectividad a la de cónyuge, con independencia de su orientación sexual, durante, al menos, los dos años anteriores al tiempo del fallecimiento", "Los descendientes del arrendatario que en el momento de su fallecimiento estuvieran sujetos a su patria potestad o tutela, o hubiesen convivido habitualmente con él durante los dos años precedentes", "Todas las anteriores"], answer: 3 },
+  { question: "¿Qué sucede si al tiempo del fallecimiento del arrendatario no existiera ninguna de las personas que pueden subrogarse en el contrato?", options: ["El arrendamiento queda extinguido", "El arrendamiento pasa al arrendador", "El arrendamiento pasa al Estado", "Ninguna de las anteriores"], answer: 0 },
+  { question: "¿Qué sucede si existiesen varias de las personas que pueden subrogarse en el contrato y no llegan a un acuerdo unánime sobre quién de ellos será el beneficiario de la subrogación?", options: ["Regirá el orden de prelación establecido en la ley", "Regirá el orden de prelación establecido en el contrato de arrendamiento", "Regirá el orden de prelación establecido por el arrendador", "Ninguna de las anteriores"], answer: 0 },
+  { question: "¿Qué sucede si en el plazo de tres meses desde la muerte del arrendatario el arrendador no recibe notificación por escrito del hecho del fallecimiento?", options: ["El arrendamiento se extingue", "El arrendamiento pasa al arrendador", "El arrendamiento pasa al Estado", "Ninguna de las anteriores"], answer: 0 },
+  { question: "¿Qué establece la Ley 49/2003, de 26 de noviembre, de arrendamientos rústicos?", options: ["Establece el régimen de sucesión mortis causa en el supuesto de fallecimiento del arrendatario", "Establece el régimen de sucesión mortis causa en el supuesto de fallecimiento del arrendador", "Establece el régimen de sucesión mortis causa en el supuesto de fallecimiento del propietario del inmueble", "Ninguna de las anteriores"], answer: 0 },
+  { question: "¿Qué es el testamento digital?", options: ["Es un documento de últimas voluntades que permite dejar instrucciones sobre el destino de los contenidos digitales en caso de fallecimiento", "Es un documento de últimas voluntades que permite dejar instrucciones sobre el destino de los bienes materiales en caso de fallecimiento", "Es un documento de últimas voluntades que permite dejar instrucciones sobre el destino de los bienes inmateriales en caso de fallecimiento", "Ninguna de las anteriores"], answer: 0 },
+  { question: "¿Qué regula la Ley Orgánica 3/2018, de 5 de diciembre, de Protección de Datos Personales y garantía de los derechos digitales?", options: ["Regula los datos de las personas fallecidas y el denominado testamento digital", "Regula los datos de las personas vivas y el denominado testamento digital", "Regula los datos de las personas fallecidas y el denominado testamento físico", "Ninguna de las anteriores"], answer: 0 },
+  { question: "¿Quiénes pueden solicitar el acceso a los datos personales de una persona fallecida?", options: ["Las personas vinculadas al fallecido por razones familiares o de hecho así como sus herederos", "Las personas o instituciones a las que el fallecido hubiese designado expresamente para ello", "Los representantes legales o, en el marco de sus competencias, el Ministerio Fiscal, en caso de fallecimiento de menores", "Todas las anteriores"], answer: 3 },
+  { question: "¿Qué sucede si la persona fallecida hubiese prohibido expresamente el acceso a sus datos?", options: ["Las personas vinculadas al fallecido por razones familiares o de hecho así como sus herederos no podrán acceder a los datos del causante, ni solicitar su rectificación o supresión", "Las personas o instituciones a las que el fallecido hubiese designado expresamente para ello no podrán acceder a los datos del causante, ni solicitar su rectificación o supresión", "Los representantes legales o, en el marco de sus competencias, el Ministerio Fiscal, en caso de fallecimiento de menores, no podrán acceder a los datos del causante, ni solicitar su rectificación o supresión", "Todas las anteriores"], answer: 0 },
+
+  {
+    question: "¿Cuál de las siguientes afirmaciones es **INCORRECTA** en relación a la sucesión en los títulos nobiliarios?",
+    options: [
+      "La sucesión de títulos nobiliarios se rige por un orden sucesorio de carácter permanente.",
+      "El orden de sucesión puede ser irregular o regular.",
+      "La mujer tiene preferencia sobre el hombre en el orden regular de llamamientos.",
+      "La Ley 33/2006 de igualdad del hombre y la mujer en el orden de sucesión de los títulos nobiliarios es aplicable."
+    ],
+    answer: 2,
+  },
+  {
+    question: "En caso de fallecimiento del arrendatario de un local urbano, ¿quién tiene derecho de subrogarse en el contrato de arrendamiento?",
+    options: [
+      "El cónyuge del arrendatario, siempre que convivieran al momento del fallecimiento.",
+      "Los hijos del arrendatario, independientemente de su edad.",
+      "Los padres del arrendatario, si no hay otros familiares con mayor derecho.",
+      "Todas las opciones anteriores son correctas."
+    ],
+    answer: 3,
+  },
+  {
+    question: "¿Qué plazo tienen los sucesores del arrendatario para notificar al arrendador el fallecimiento y su intención de subrogarse en el contrato?",
+    options: ["1 mes", "2 meses", "3 meses", "4 meses"],
+    answer: 2,
+  },
+  {
+    question: "En caso de que existan varios subrogados potenciales en un arrendamiento urbano, ¿cómo se determina quién tiene preferencia?",
+    options: [
+      "Por sorteo",
+      "Por acuerdo unánime entre los subrogados",
+      "Por orden de edad, siendo el mayor el que tiene preferencia",
+      "El orden de prelación se establece en el art. 16 de la Ley de Arrendamientos Urbanos."
+    ],
+    answer: 3,
+  },
+  {
+    question: "¿En qué casos se extingue el arrendamiento rústico tras el fallecimiento del arrendatario?",
+    options: [
+      "Si no hay sucesores legítimos del arrendatario.",
+      "Si el arrendatario no tiene hijos.",
+      "Si el arrendatario no ha designado a un sucesor en el testamento.",
+      "Si el arrendamiento tiene una duración superior a 5 años y el fallecimiento se produce después de los primeros 3 años."
+    ],
+    answer: 3,
+  },
+  {
+    question: "¿Qué es el 'testamento digital'?",
+    options: [
+      "Un documento que permite dejar instrucciones sobre el destino de los bienes muebles en caso de fallecimiento.",
+      "Un documento que permite dejar instrucciones sobre el destino de los datos personales en caso de fallecimiento.",
+      "Un documento que permite dejar instrucciones sobre el destino de los hijos menores en caso de fallecimiento.",
+      "Un documento que permite dejar instrucciones sobre el destino de las mascotas en caso de fallecimiento."
+    ],
+    answer: 1,
+  },
+  {
+    question: "¿Quién puede acceder a los datos personales de una persona fallecida?",
+    options: [
+      "Cualquier persona que lo solicite.",
+      "Las personas vinculadas al fallecido por razones familiares o de hecho, así como sus herederos.",
+      "El cónyuge del fallecido.",
+      "Las personas que el fallecido haya designado expresamente para ello."
+    ],
+    answer: 3,
+  },
+  {
+    question: "¿Qué sucede con los perfiles en redes sociales de una persona fallecida?",
+    options: [
+      "Se eliminan automáticamente.",
+      "Se mantienen activos para que los amigos y familiares puedan recordar al fallecido.",
+      "Se convierten en un perfil conmemorativo.",
+      "Los familiares o las personas legitimadas pueden decidir si mantenerlos o eliminarlos."
+    ],
+    answer: 3,
+  },
+  {
+    question: "¿Qué ley regula el derecho al testamento digital en España?",
+    options: [
+      "La Ley de Enjuiciamiento Civil.",
+      "La Ley de Propiedad Horizontal.",
+      "La Ley de Arrendamientos Urbanos.",
+      "La Ley Orgánica 3/2018 de Protección de Datos Personales y garantía de los derechos digitales."
+    ],
+    answer: 3,
+  },
+  {
+    question: "¿Cuáles son las fases del proceso sucesorio?",
+    options: [
+      "Apertura de la sucesión, vocación, delación y adquisición.",
+      "Apertura de la sucesión, delación y adquisición.",
+      "Vocación, delación y adquisición.",
+    ],
+    answer: 0,
+  },
+  {
+    question: "¿Cómo se denomina al llamamiento de un sujeto de derecho a la herencia?",
+    options: ["Delación", "Vocación", "Adquisición"],
+    answer: 1,
+  },
+  {
+    question: "¿Cómo se denomina al poder del llamado mediante cuyo ejercicio podrá aceptar o repudiar la herencia?",
+    options: ["Vocación", "Delación", "Adquisición"],
+    answer: 1,
+  },
+  {
+    question: "¿Cómo se denomina al llamamiento de todos los posibles herederos en el momento de la muerte del decuius, por voluntad de éste o, en su caso, de la ley?",
+    options: ["Vocación a la herencia", "Delación", "Adquisición"],
+    answer: 0,
+  },
+  {
+    question: "Para que una persona sea considerada heredero, ¿basta con que sea llamada a una herencia o ha de ofrecérsele la misma para su aceptación y ha de aceptarla?",
+    options: [
+      "Basta con que sea llamada a una herencia.",
+      "Han de ofrecérsela y ademas aceptarla.",
+      "No es necesario que la acepte.",
+    ],
+    answer: 1,
+  },
+{
+  question: "¿Qué efectos jurídicos produce la muerte de José y María en relación con la herencia de su tía Teresa?",
+  options: [
+    "Se produce la transmisión automática de la herencia a sus hijos.",
+    "Se abre la sucesión y sus hijos tienen un plazo para aceptar o repudiar la herencia.",
+    "No se produce ningún efecto jurídico.",
+  ],
+  answer: 1,
+},
+{
+  question: "¿Qué acciones legales puede tomar Sebastián para proteger el honor de su tía Teresa?",
+  options: [
+    "Interponer una demanda de tutela del honor post mortem.",
+    "No puede tomar ninguna acción legal.",
+    "Presentar una denuncia ante la policía.",
+  ],
+  answer: 0,
+},
+{
+  question: "¿Qué consecuencias jurídicas tiene la desaparición de José y María en relación con la apertura de su propia sucesión?",
+  options: [
+    "No se produce la apertura de la sucesión.",
+    "Se produce la apertura de la sucesión de forma inmediata.",
+    "Se abre la sucesión, pero se suspende hasta que se declare el fallecimiento de José y María.",
+  ],
+  answer: 2,
+},
+{
+  question: "¿Qué efectos tiene la muerte de Antonio sobre la herencia de su tía Emilia?",
+  options: [
+    "Sus hijos no pueden aceptar la herencia de su tía sin aceptar la de su padre.",
+    "Sus hijos pueden aceptar la herencia de su tía sin aceptar la de su padre.",
+    "La Fundación 'Santa Cecilia' hereda la totalidad de la herencia.",
+  ],
+  answer: 1,
+},
+{
+  question: "¿Qué derechos tienen la viuda e hijos de Julio en relación con la herencia de Doña Cristina (tia de julio)?",
+  options: [
+    "Pueden aceptar la herencia de Doña Cristina sin aceptar la de Julio.",
+    "No tienen ningún derecho sobre la herencia de Doña Cristina.",
+    "Deben aceptar la herencia de Julio antes de poder aceptar la de Doña Cristina.",
+  ],
+  answer: 0,
+},
+
 
 
 
